@@ -1,3 +1,11 @@
+2009-04-18  H.J. Lu  <hongjiu.lu@intel.com>
+
+	Backport from mainline:
+	2009-04-18  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/39804
+	* gcc.target/i386/pr39804.c: New testcase.
+
 2009-04-18  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* gcc.target/i386/pr39496.c: Compile with -mtune=i686.
